--- a/index.html
+++ b/index.html
@@ -131,18 +131,17 @@
 
 
     <!-- Team Section -->
-    <!-- Team Section -->
-<!-- Team Section -->
 <section id="team" class="bg-light py-5">
   <div class="container">
       <h2 class="text-center mb-4">Meet the Team</h2>
       <div class="row">
+       
           <div class="col-md-6 col-lg-3 mb-4">
               <div class="card h-100">
                   <img src="/images/amanda.png" class="card-img-top img-fluid" alt="Amanda Gxagxa">
                   <div class="card-body">
                       <h5 class="card-title">Amanda Gxagxa - CEO</h5>
-                      <p class="card-text" id="text-amanda">I lead initiatives aimed at leveraging technology to drive positive change. With a background in software development, I'm deeply passionate about learning new technologies and utilizing them to uplift communities. My commitment to making a difference through technology guides my work, and I'm dedicated to contributing to the betterment of society.</p>
+                      <p class="card-text short-text" id="text-amanda">I lead initiatives aimed at leveraging technology to drive positive change. With a background in software development, I'm deeply passionate about learning new technologies and utilizing them to uplift communities. My commitment to making a difference through technology guides my work, and I'm dedicated to contributing to the betterment of society.</p>
                       <p class="card-text full-text" id="full-text-amanda">I lead initiatives aimed at leveraging technology to drive positive change. With a background in software development, I'm deeply passionate about learning new technologies and utilizing them to uplift communities. My commitment to making a difference through technology guides my work, and I'm dedicated to contributing to the betterment of society.</p>
                       <a href="#" class="read-more" data-target="amanda">Read More</a>
                   </div>
@@ -153,7 +152,7 @@
                   <img src="/images/lilo.jpg" class="card-img-top img-fluid" alt="Lilo M">
                   <div class="card-body">
                       <h5 class="card-title">Lilo M - COO</h5>
-                      <p class="card-text" id="text-lilo">As a dedicated member of BiziNovate Accelerator, I am committed to making a meaningful impact in our communities by steering positive change and uplifting youth and small to medium-sized businesses. My focus is on bringing awareness of the transformative power of technology and its potential to drive growth, innovation, and economic development.</p>
+                      <p class="card-text short-text" id="text-lilo">As a dedicated member of BiziNovate Accelerator, I am committed to making a meaningful impact in our communities by steering positive change and uplifting youth and small to medium-sized businesses. My focus is on bringing awareness of the transformative power of technology and its potential to drive growth, innovation, and economic development.</p>
                       <p class="card-text full-text" id="full-text-lilo">As a dedicated member of BiziNovate Accelerator, I am committed to making a meaningful impact in our communities by steering positive change and uplifting youth and small to medium-sized businesses. My focus is on bringing awareness of the transformative power of technology and its potential to drive growth, innovation, and economic development.</p>
                       <a href="#" class="read-more" data-target="lilo">Read More</a>
                   </div>
@@ -164,7 +163,7 @@
                   <img src="/images/cat-2.jpg" class="card-img-top img-fluid" alt="Anathi Beni">
                   <div class="card-body">
                       <h5 class="card-title">Anathi Beni - Chief of Staff</h5>
-                      <p class="card-text" id="text-anathi">My responsibility as CMO is for overseeing the planning, development, and execution of an organization's marketing and advertising initiatives. I leverage digital marketing tools, social media, and data analytics to engage customers, personalize marketing efforts, and maximize the impact of their marketing.</p>
+                      <p class="card-text short-text" id="text-anathi">My responsibility as CMO is for overseeing the planning, development, and execution of an organization's marketing and advertising initiatives. I leverage digital marketing tools, social media, and data analytics to engage customers, personalize marketing efforts, and maximize the impact of their marketing.</p>
                       <p class="card-text full-text" id="full-text-anathi">My responsibility as CMO is for overseeing the planning, development, and execution of an organization's marketing and advertising initiatives. I leverage digital marketing tools, social media, and data analytics to engage customers, personalize marketing efforts, and maximize the impact of their marketing.</p>
                       <a href="#" class="read-more" data-target="anathi">Read More</a>
                   </div>
@@ -175,7 +174,7 @@
                   <img src="/images/yonela.jpg" class="card-img-top img-fluid" alt="Yonela Futhp">
                   <div class="card-body">
                       <h5 class="card-title">Yonela Futhp - CFO</h5>
-                      <p class="card-text" id="text-yonela">I am a member of the BizInnovate Accelerator because I firmly believe in promoting innovation and helping businesses start out. My personal values of honesty, strategic thinking, and a dedication to quality are aligned with BizInnovate's objective of supporting and growing creative businesses.</p>
+                      <p class="card-text short-text" id="text-yonela">I am a member of the BizInnovate Accelerator because I firmly believe in promoting innovation and helping businesses start out. My personal values of honesty, strategic thinking, and a dedication to quality are aligned with BizInnovate's objective of supporting and growing creative businesses.</p>
                       <p class="card-text full-text" id="full-text-yonela">I am a member of the BizInnovate Accelerator because I firmly believe in promoting innovation and helping businesses start out. My personal values of honesty, strategic thinking, and a dedication to quality are aligned with BizInnovate's objective of supporting and growing creative businesses.</p>
                       <a href="#" class="read-more" data-target="yonela">Read More</a>
                   </div>
@@ -189,39 +188,40 @@
 
 
 
+
     <!-- Contact Section -->
     <section id="contact" class="py-5">
-        <div class="container">
-            <h2 class="text-center">Contact Us</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <p><strong>BiziNovate Accelerator</strong></p>
-                    <p>Phone: +27 67 9131362</p>
-                    <p>Email: <a href="mailto:amandagxagxa@gmai.com">amandagxagxa@gmai.com</a></p>
-                    <p>Address: 42925 Gxalaba Street, Makhaza, Khayelitsha, 7784</p>
-                </div>
-                <div class="col-md-6">
-                    <h4>Send Us a Message</h4>
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea class="form-control" id="message" rows="3" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Send Message</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
+      <div class="container">
+          <h2 class="text-center mb-4">Contact Us</h2>
+          <div class="row">
+              <div class="col-md-6">
+                  <p><strong>BiziNovate Accelerator</strong></p>
+                  <p>Phone: +27 67 9131362</p>
+                  <p>Email: <a href="mailto:amandagxagxa@gmai.com">amandagxagxa@gmai.com</a></p>
+                  <p>Address: 42925 Gxalaba Street, Makhaza, Khayelitsha, 7784</p>
+              </div>
+              <div class="col-md-6">
+                  <h4>Send Us a Message</h4>
+                  <form>
+                      <div class="form-group">
+                          <label for="name">Name</label>
+                          <input type="text" class="form-control" id="name" required>
+                      </div>
+                      <div class="form-group">
+                          <label for="email">Email address</label>
+                          <input type="email" class="form-control" id="email" required>
+                      </div>
+                      <div class="form-group">
+                          <label for="message">Message</label>
+                          <textarea class="form-control" id="message" rows="3" required></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Send Message</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </section>
+  
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2024 BiziNovate Accelerator. All rights reserved.</p>
