--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
       <div class="row">
           <div class="col-md-6 col-lg-4 mb-4">
               <h3>Girls Digital Literacy</h3>
-              <p>In collaboration with WOMANDLA, we are hosting digital literacy skills programs for girls to enhance their tech knowledge and skills.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                Architecto animi facere deleniti quas facilis veritatis? Dolores 
+                error expedita, quaerat perferendis, mollitia ea dolorum ipsum vitae 
+                culpa suscipit doloribus iure recusandae.</p>
           </div>
           <div class="col-md-6 col-lg-4 mb-4">
               <h3>12 Months Incubation</h3>
