--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <div class="card h-100">
                   <img src="/images/yonela.jpg" class="card-img-top img-fluid" alt="Yonela Futhp">
                   <div class="card-body">
-                      <h5 class="card-title">Yonela Futhp - CFO</h5>
+                      <h5 class="card-title">Yonela Futho - CFO</h5>
                       <p class="card-text short-text" id="text-yonela">I am a member of the BizInnovate Accelerator because I firmly believe in promoting innovation and helping businesses start out. My personal values of honesty, strategic thinking, and a dedication to quality are aligned with BizInnovate's objective of supporting and growing creative businesses.</p>
                       <p class="card-text full-text" id="full-text-yonela">I am a member of the BizInnovate Accelerator because I firmly believe in promoting innovation and helping businesses start out. My personal values of honesty, strategic thinking, and a dedication to quality are aligned with BizInnovate's objective of supporting and growing creative businesses.</p>
                       <a href="#" class="read-more" data-target="yonela">Read More</a>
