Fixing css for About page

--- a/index.html
+++ b/index.html
@@ -51,20 +51,22 @@
 
     <!-- About Section -->
     <section id="about" class="py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>About Us</h2>
-                    <p>BiziNovate Accelerator is a dynamic social enterprise committed to bridging the digital divide and empowering individuals and communities through comprehensive technology education and IT services. With a passionate dedication to social impact, our mission is to raise awareness and provide education on the transformative power of technology in both business and personal life. We prioritize reaching underserved populations, particularly women and youth from disadvantaged communities, to ensure that everyone has equal access to opportunities in the digital age.</p>
-                </div>
-                <div class="col-lg-6">
-                    <h3>Mission Statement</h3>
-                    <p>BiziNovate Accelerator is dedicated to raising awareness and providing education on the importance of technology in both business and personal life. We aim to bridge the digital divide by empowering individuals from disadvantaged communities, especially women and youth, with the knowledge and skills needed to leverage technology for their success.</p>
-                    <h3>Vision Statement</h3>
-                    <p>Our vision is to create a world where everyone, regardless of background or gender, has equal access to and proficiency in technology, unlocking opportunities for personal growth, economic advancement, and social inclusion.</p>
-                </div>
+      <div class="container">
+        <div class="text-center">
+            <h2>About Us</h2>
+            <p>BiziNovate Accelerator is a dynamic social enterprise committed to bridging the digital divide and empowering individuals and communities through comprehensive technology education and IT services. With a passionate dedication to social impact, our mission is to raise awareness and provide education on the transformative power of technology in both business and personal life. We prioritize reaching underserved populations, particularly women and youth from disadvantaged communities, to ensure that everyone has equal access to opportunities in the digital age.</p>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-6">
+                <h3>Mission Statement</h3>
+                <p>BiziNovate Accelerator is dedicated to raising awareness and providing education on the importance of technology in both business and personal life. We aim to bridge the digital divide by empowering individuals from disadvantaged communities, especially women and youth, with the knowledge and skills needed to leverage technology for their success.</p>
+            </div>
+            <div class="col-md-6">
+                <h3>Vision Statement</h3>
+                <p>Our vision is to create a world where everyone, regardless of background or gender, has equal access to and proficiency in technology, unlocking opportunities for personal growth, economic advancement, and social inclusion.</p>
             </div>
         </div>
+    </div>
     </section>
 
     <!-- Services Section -->
