--- a/index.html
+++ b/index.html
@@ -111,28 +111,49 @@
 </section>
 
     <!-- Projects Section -->
-<section id="projects" class="py-5">
-  <div class="container">
-      <h2 class="text-center">Our Projects</h2>
-      <div class="row">
-          <div class="col-md-6 col-lg-4 mb-4">
-              <h3>Girls Digital Literacy</h3>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Architecto animi facere deleniti quas facilis veritatis? Dolores 
-                error expedita, quaerat perferendis, mollitia ea dolorum ipsum vitae 
-                culpa suscipit doloribus iure recusandae.</p>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4">
-              <h3>12 Months Incubation</h3>
-              <p>Our 12-month program starts with digital literacy skills and coding, then focuses on using technology to innovate your business.</p>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4">
-              <h3>High School Programs</h3>
-              <p>We offer Digital Literacy and Robotics Training to high schools, preparing students for future tech careers.</p>
+    <section id="projects" class="py-5">
+      <div class="container">
+          <h2 class="text-center">Our Projects</h2>
+          <div id="eventCarousel" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                  <li data-target="#eventCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#eventCarousel" data-slide-to="1"></li>
+                  <li data-target="#eventCarousel" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <img src="path/to/image1.jpg" class="d-block w-100" alt="Event Image 1">
+                      <div class="carousel-caption d-none d-md-block">
+                          <h5>Girls Digital Literacy</h5>
+                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <img src="path/to/image2.jpg" class="d-block w-100" alt="Event Image 2">
+                      <div class="carousel-caption d-none d-md-block">
+                          <h5>12 Months Incubation</h5>
+                          <p>Our 12-month program starts with digital literacy skills and coding.</p>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                      <img src="path/to/image3.jpg" class="d-block w-100" alt="Event Image 3">
+                      <div class="carousel-caption d-none d-md-block">
+                          <h5>High School Programs</h5>
+                          <p>We offer Digital Literacy and Robotics Training to high schools.</p>
+                      </div>
+                  </div>
+              </div>
+              <a class="carousel-control-prev" href="#eventCarousel" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#eventCarousel" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+              </a>
           </div>
       </div>
-  </div>
-</section>
+  </section>
 
 
     <!-- Team Section -->
@@ -143,7 +164,7 @@
        
           <div class="col-md-6 col-lg-3 mb-4">
               <div class="card h-100">
-                  <img src="/images/amanda.png" class="card-img-top img-fluid" alt="Amanda Gxagxa">
+                  <img src="/images/amanda1.jpg" class="card-img-top img-fluid" alt="Amanda Gxagxa">
                   <div class="card-body">
                       <h5 class="card-title">Amanda Gxagxa - CEO</h5>
                       <p class="card-text short-text" id="text-amanda">I lead initiatives aimed at leveraging technology to drive positive change. With a background in software development, I'm deeply passionate about learning new technologies and utilizing them to uplift communities. My commitment to making a difference through technology guides my work, and I'm dedicated to contributing to the betterment of society.</p>
@@ -165,7 +186,7 @@
           </div>
           <div class="col-md-6 col-lg-3 mb-4">
               <div class="card h-100">
-                  <img src="/images/cat-2.jpg" class="card-img-top img-fluid" alt="Anathi Beni">
+                  <img src="/images/anathi.jpg" class="card-img-top img-fluid" alt="Anathi Beni">
                   <div class="card-body">
                       <h5 class="card-title">Anathi Beni - Chief of Staff</h5>
                       <p class="card-text short-text" id="text-anathi">My responsibility as CMO is for overseeing the planning, development, and execution of an organization's marketing and advertising initiatives. I leverage digital marketing tools, social media, and data analytics to engage customers, personalize marketing efforts, and maximize the impact of their marketing.</p>
