--- a/index.html
+++ b/index.html
@@ -122,21 +122,21 @@
               </ol>
               <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <img src="path/to/image1.jpg" class="d-block w-100" alt="Event Image 1">
+                      <img src="/images/event1.jpg" class="d-block w-100" alt="Event Image 1">
                       <div class="carousel-caption d-none d-md-block">
                           <h5>Girls Digital Literacy</h5>
                           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                      <img src="path/to/image2.jpg" class="d-block w-100" alt="Event Image 2">
+                      <img src="/images/event2.jpg" class="d-block w-100" alt="Event Image 2">
                       <div class="carousel-caption d-none d-md-block">
                           <h5>12 Months Incubation</h5>
                           <p>Our 12-month program starts with digital literacy skills and coding.</p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                      <img src="path/to/image3.jpg" class="d-block w-100" alt="Event Image 3">
+                      <img src="/images/event3.jpg" class="d-block w-100" alt="Event Image 3">
                       <div class="carousel-caption d-none d-md-block">
                           <h5>High School Programs</h5>
                           <p>We offer Digital Literacy and Robotics Training to high schools.</p>
