Adding Social Media links

--- a/index.html
+++ b/index.html
@@ -225,6 +225,16 @@
                   <p>Phone: +27 67 9131362</p>
                   <p>Email: <a href="mailto:amandagxagxa@gmai.com">amandagxagxa@gmai.com</a></p>
                   <p>Address: 42925 Gxalaba Street, Makhaza, Khayelitsha, 7784</p>
+                  
+                  <!-- Social Media Links -->
+                  <div class="social-media mt-4">
+                      <a href="https://www.linkedin.com/company/bizinovate/" target="_blank" class="mr-3">
+                          <i class="fab fa-linkedin fa-2x"></i>
+                      </a>
+                      <a href="https://www.facebook.com/profile.php?id=61558794344201" target="_blank">
+                          <i class="fab fa-facebook fa-2x"></i>
+                      </a>
+                  </div>
               </div>
               <div class="col-md-6">
                   <h4>Send Us a Message</h4>
@@ -247,6 +257,7 @@
           </div>
       </div>
   </section>
+  
   
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
