--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>BiziNovate Accelerator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -228,13 +229,13 @@
                   
                   <!-- Social Media Links -->
                   <div class="social-media mt-4">
-                      <a href="https://www.linkedin.com/company/bizinovate/" target="_blank" class="mr-3">
-                          <i class="fab fa-linkedin fa-2x"></i>
-                      </a>
-                      <a href="https://www.facebook.com/profile.php?id=61558794344201" target="_blank">
-                          <i class="fab fa-facebook fa-2x"></i>
-                      </a>
-                  </div>
+                    <a href="https://www.linkedin.com/company/bizinovate/" target="_blank" class="mr-3">
+                        <i class="fab fa-linkedin fa-2x"></i>
+                    </a>
+                    <a href="https://www.facebook.com/profile.php?id=61558794344201&sk=about" target="_blank">
+                        <i class="fab fa-facebook fa-2x"></i>
+                    </a>
+                </div>
               </div>
               <div class="col-md-6">
                   <h4>Send Us a Message</h4>
