--- a/index.html
+++ b/index.html
@@ -111,50 +111,75 @@
   </div>
 </section>
 
-    <!-- Projects Section -->
+    <!-- Events Section -->
     <section id="projects" class="py-5">
       <div class="container">
-          <h2 class="text-center">Our Projects</h2>
-          <div id="eventCarousel" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                  <li data-target="#eventCarousel" data-slide-to="0" class="active"></li>
-                  <li data-target="#eventCarousel" data-slide-to="1"></li>
-                  <li data-target="#eventCarousel" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                  <div class="carousel-item active">
-                      <img src="/images/event1.jpg" class="d-block w-100" alt="Event Image 1">
-                      <div class="carousel-caption d-none d-md-block">
-                          <h5>Girls Digital Literacy</h5>
-                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                      <img src="/images/event2.jpg" class="d-block w-100" alt="Event Image 2">
-                      <div class="carousel-caption d-none d-md-block">
-                          <h5>12 Months Incubation</h5>
-                          <p>Our 12-month program starts with digital literacy skills and coding.</p>
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                      <img src="/images/event3.jpg" class="d-block w-100" alt="Event Image 3">
-                      <div class="carousel-caption d-none d-md-block">
-                          <h5>High School Programs</h5>
-                          <p>We offer Digital Literacy and Robotics Training to high schools.</p>
-                      </div>
-                  </div>
+        <h2 class="text-center">Events</h2>
+        <div id="eventCarousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#eventCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#eventCarousel" data-slide-to="1"></li>
+            <li data-target="#eventCarousel" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <!-- Event 1 -->
+            <div class="carousel-item active">
+              <div class="d-block w-100">
+                <img src="/images/event1.jpg" class="d-block w-100" alt="Event Image 1">
+                <img src="/images/event2.jpg" class="d-block w-100" alt="Event Image 2">
+                <img src="/images/event3.jpg" class="d-block w-100" alt="Event Image 3">
+                <img src="/images/event4.jpg" class="d-block w-100" alt="Event Image 4">
+                <img src="/images/event5.jpg" class="d-block w-100" alt="Event Image 5">
               </div>
-              <a class="carousel-control-prev" href="#eventCarousel" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#eventCarousel" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <h5>EmpowerHer Event</h5>
+                <p>This is a unique opportunity for female professionals, aspiring tech enthusiasts, and small business owners to gain valuable insights and network with industry leaders.
+                  For Aspiring Tech Professionals: Gain insights from leading experts and explore opportunities in the tech industry.
+                  For Small Business Owners: Learn how to leverage technology and AI to optimize and grow your business.
+                  For Funders: Your support will enable us to provide transformative opportunities for women and small businesses, driving innovation and empowerment.</p>
+              </div>
+            </div>
+            <!-- Event 2 -->
+            <div class="carousel-item">
+              <div class="d-block w-100">
+                <img src="/images/event2-1.jpg" class="d-block w-100" alt="Event Image 1">
+                <img src="/images/event2-2.jpg" class="d-block w-100" alt="Event Image 2">
+                <img src="/images/event2-3.jpg" class="d-block w-100" alt="Event Image 3">
+                <img src="/images/event2-4.jpg" class="d-block w-100" alt="Event Image 4">
+                <img src="/images/event2-5.jpg" class="d-block w-100" alt="Event Image 5">
+              </div>
+              <div class="carousel-caption d-none d-md-block">
+                <h5>12 Months Incubation</h5>
+                <p>Our 12-month program starts with digital literacy skills and coding.</p>
+              </div>
+            </div>
+            <!-- Event 3 -->
+            <div class="carousel-item">
+              <div class="d-block w-100">
+                <img src="/images/event3-1.jpg" class="d-block w-100" alt="Event Image 1">
+                <img src="/images/event3-2.jpg" class="d-block w-100" alt="Event Image 2">
+                <img src="/images/event3-3.jpg" class="d-block w-100" alt="Event Image 3">
+                <img src="/images/event3-4.jpg" class="d-block w-100" alt="Event Image 4">
+                <img src="/images/event3-5.jpg" class="d-block w-100" alt="Event Image 5">
+              </div>
+              <div class="carousel-caption d-none d-md-block">
+                <h5>High School Programs</h5>
+                <p>We offer Digital Literacy and Robotics Training to high schools.</p>
+              </div>
+            </div>
           </div>
+          <a class="carousel-control-prev" href="#eventCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#eventCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
-  </section>
+    </section>
+    
 
 
     <!-- Team Section -->
