Adding images for our Projects

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- Events Section -->
     <section id="projects" class="py-5">
       <div class="container">
-        <h2 class="text-center">Events</h2>
+        <h2 class="text-center">Projects</h2>
         <div id="eventCarousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#eventCarousel" data-slide-to="0" class="active"></li>
@@ -142,14 +142,13 @@
             <!-- Event 2 -->
             <div class="carousel-item">
               <div class="d-block w-100">
-                <img src="/images/event2-1.jpg" class="d-block w-100" alt="Event Image 1">
-                <img src="/images/event2-2.jpg" class="d-block w-100" alt="Event Image 2">
-                <img src="/images/event2-3.jpg" class="d-block w-100" alt="Event Image 3">
-                <img src="/images/event2-4.jpg" class="d-block w-100" alt="Event Image 4">
-                <img src="/images/event2-5.jpg" class="d-block w-100" alt="Event Image 5">
+                <img src="/images/GBV1.jpg" class="d-block w-100" alt="Event Image 1">
+                <img src="/images/GBV2.jpg" class="d-block w-100" alt="Event Image 2">
+                <img src="/images/gbv3.jpg" class="d-block w-100" alt="Event Image 3">
+                <img src="/images/gbv4.jpg" class="d-block w-100" alt="Event Image 4">
               </div>
               <div class="carousel-caption d-none d-md-block">
-                <h5>12 Months Incubation</h5>
+                <h5>Gender based violence  and Gender inequality</h5>
                 <p>Our 12-month program starts with digital literacy skills and coding.</p>
               </div>
             </div>
