--- a/index.html
+++ b/index.html
@@ -124,48 +124,32 @@
           <div class="carousel-inner">
             <!-- Event 1 -->
             <div class="carousel-item active">
-              <div class="d-block w-100">
+              <div class="carousel-item active">
                 <img src="/images/event1.jpg" class="d-block w-100" alt="Event Image 1">
-                <img src="/images/event2.jpg" class="d-block w-100" alt="Event Image 2">
-                <img src="/images/event3.jpg" class="d-block w-100" alt="Event Image 3">
-                <img src="/images/event4.jpg" class="d-block w-100" alt="Event Image 4">
-                <img src="/images/event5.jpg" class="d-block w-100" alt="Event Image 5">
-              </div>
-              <div class="carousel-caption d-none d-md-block">
-                <h5>EmpowerHer Event</h5>
-                <p>This is a unique opportunity for female professionals, aspiring tech enthusiasts, and small business owners to gain valuable insights and network with industry leaders.
-                  For Aspiring Tech Professionals: Gain insights from leading experts and explore opportunities in the tech industry.
-                  For Small Business Owners: Learn how to leverage technology and AI to optimize and grow your business.
-                  For Funders: Your support will enable us to provide transformative opportunities for women and small businesses, driving innovation and empowerment.</p>
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>EmpowerHer Event</h5>
+                  <p>This is a unique opportunity for female professionals, aspiring tech enthusiasts, and small business owners to gain valuable insights and network with industry leaders. For Aspiring Tech Professionals: Gain insights from leading experts and explore opportunities in the tech industry. For Small Business Owners: Learn how to leverage technology and AI to optimize and grow your business. For Funders: Your support will enable us to provide transformative opportunities for women and small businesses, driving innovation and empowerment.</p>
+                </div>
               </div>
             </div>
-            <!-- Event 2 -->
-            <div class="carousel-item">
-              <div class="d-block w-100">
-                <img src="/images/GBV1.jpg" class="d-block w-100" alt="Event Image 1">
-                <img src="/images/GBV2.jpg" class="d-block w-100" alt="Event Image 2">
-                <img src="/images/gbv3.jpg" class="d-block w-100" alt="Event Image 3">
-                <img src="/images/gbv4.jpg" class="d-block w-100" alt="Event Image 4">
-              </div>
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Gender based violence  and Gender inequality</h5>
-                <p>Our 12-month program starts with digital literacy skills and coding.</p>
-              </div>
-            </div>
-            <!-- Event 3 -->
-            <div class="carousel-item">
-              <div class="d-block w-100">
-                <img src="/images/event3-1.jpg" class="d-block w-100" alt="Event Image 1">
-                <img src="/images/event3-2.jpg" class="d-block w-100" alt="Event Image 2">
-                <img src="/images/event3-3.jpg" class="d-block w-100" alt="Event Image 3">
-                <img src="/images/event3-4.jpg" class="d-block w-100" alt="Event Image 4">
-                <img src="/images/event3-5.jpg" class="d-block w-100" alt="Event Image 5">
-              </div>
-              <div class="carousel-caption d-none d-md-block">
-                <h5>High School Programs</h5>
-                <p>We offer Digital Literacy and Robotics Training to high schools.</p>
-              </div>
-            </div>
+           
+               <!-- Event 2 -->
+        <div class="carousel-item">
+          <img src="/images/GBV1.jpg" class="d-block w-100" alt="Event Image 1">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Gender Based Violence and Gender Inequality</h5>
+            <p>BiziNovate Accelerator was invited to the youth day celebration event on July 17, 2024, hosted by HeadofHeart in collaboration with Qulakwedini. This special event focused on consent culture provided us with a wonderful opportunity to empower youth and small business owners through technology and AI, business services, and IT services. At BiziNovate, we care deeply about the youth, the Township economy, and the rural areas economy. We are excited to share how our services can enhance lives and transform small businesses, giving hope to participants by demonstrating the impact our solutions can have on their daily operations and long-term success. By participating in this event, we aim to inspire and support the next generation of entrepreneurs, fostering growth and innovation within our communities. Thank you to HeadofHeart and Qulakwedini for this incredible opportunity.</p>
+          </div>
+        </div>
+            
+           <!-- Event 3 -->
+        <div class="carousel-item">
+          <img src="/images/school1.jpg" class="d-block w-100" alt="Event Image 1">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>High School Programs</h5>
+            <p>On June 16, 2024, BiziNovate honored the activists of 1976 by renovating Nondwe High School in the Eastern Cape province. The principal and the School Governing Body (SGB) were overjoyed.</p>
+          </div>
+        </div>
           </div>
           <a class="carousel-control-prev" href="#eventCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
