--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <!-- Event 1 -->
             <div class="carousel-item active">
               <img
-                src="/images/event1.jpg"
+                src="/images/event4.jpg"
                 class="d-block w-100"
                 alt="Event Image 1"
               />
@@ -215,7 +215,7 @@
             <!-- Event 2 -->
             <div class="carousel-item">
               <img
-                src="/images/GBV1.jpg"
+                src="/images/gbv5.jpg"
                 class="d-block w-100"
                 alt="Event Image 1"
               />
@@ -243,7 +243,7 @@
             <!-- Event 3 -->
             <div class="carousel-item">
               <img
-                src="/images/school1.jpg"
+                src="/images/school5.jpg"
                 class="d-block w-100"
                 alt="Event Image 1"
               />
