Added functionality for read more

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                   a difference through technology guides my work, and I'm
                   dedicated to contributing to the betterment of society.
                 </p>
-                <a href="#" class="read-more" data-target="amanda">Read More</a>
+                <a href="javascript:void(0);" class="read-more" data-target="amanda">Read More</a>
               </div>
             </div>
           </div>
@@ -339,7 +339,7 @@
                   the transformative power of technology and its potential to
                   drive growth, innovation, and economic development.
                 </p>
-                <a href="#" class="read-more" data-target="lilo">Read More</a>
+                <a href="javascript:void(0);" class="read-more" data-target="amanda">Read More</a>
               </div>
             </div>
           </div>
@@ -368,7 +368,7 @@
                   personalize marketing efforts, and maximize the impact of
                   their marketing.
                 </p>
-                <a href="#" class="read-more" data-target="anathi">Read More</a>
+                <a href="javascript:void(0);" class="read-more" data-target="amanda">Read More</a>
               </div>
             </div>
           </div>
@@ -395,7 +395,7 @@
                   dedication to quality are aligned with BizInnovate's objective
                   of supporting and growing creative businesses.
                 </p>
-                <a href="#" class="read-more" data-target="yonela">Read More</a>
+                <a href="javascript:void(0);" class="read-more" data-target="amanda">Read More</a>
               </div>
             </div>
           </div>
