Adding more style and functionality

--- a/index.html
+++ b/index.html
@@ -295,12 +295,7 @@
               <div class="card-body">
                 <h5 class="card-title">Amanda Gxagxa - CEO</h5>
                 <p class="card-text short-text" id="text-amanda">
-                  I lead initiatives aimed at leveraging technology to drive
-                  positive change. With a background in software development,
-                  I'm deeply passionate about learning new technologies and
-                  utilizing them to uplift communities. My commitment to making
-                  a difference through technology guides my work, and I'm
-                  dedicated to contributing to the betterment of society.
+                  I lead initiatives aimed at leveraging technology to drive positive change. With a background in software development, I'm deeply passionate about learning new technologies and utilizing them to uplift communities...
                 </p>
                 <p class="card-text full-text" id="full-text-amanda">
                   I lead initiatives aimed at leveraging technology to drive
@@ -326,10 +321,7 @@
                 <p class="card-text short-text" id="text-lilo">
                   As a dedicated member of BiziNovate Accelerator, I am
                   committed to making a meaningful impact in our communities by
-                  steering positive change and uplifting youth and small to
-                  medium-sized businesses. My focus is on bringing awareness of
-                  the transformative power of technology and its potential to
-                  drive growth, innovation, and economic development.
+                  steering positive change and uplifting youth...
                 </p>
                 <p class="card-text full-text" id="full-text-lilo">
                   As a dedicated member of BiziNovate Accelerator, I am
@@ -354,11 +346,7 @@
                 <h5 class="card-title">Anathi Beni - Chief of Staff</h5>
                 <p class="card-text short-text" id="text-anathi">
                   My responsibility as CMO is for overseeing the planning,
-                  development, and execution of an organization's marketing and
-                  advertising initiatives. I leverage digital marketing tools,
-                  social media, and data analytics to engage customers,
-                  personalize marketing efforts, and maximize the impact of
-                  their marketing.
+                  development, and execution of an organization's marketing and...
                 </p>
                 <p class="card-text full-text" id="full-text-anathi">
                   My responsibility as CMO is for overseeing the planning,
@@ -383,10 +371,7 @@
                 <h5 class="card-title">Yonela Futho - CFO</h5>
                 <p class="card-text short-text" id="text-yonela">
                   I am a member of the BizInnovate Accelerator because I firmly
-                  believe in promoting innovation and helping businesses start
-                  out. My personal values of honesty, strategic thinking, and a
-                  dedication to quality are aligned with BizInnovate's objective
-                  of supporting and growing creative businesses.
+                  believe in promoting innovation and helping businesses ...
                 </p>
                 <p class="card-text full-text" id="full-text-yonela">
                   I am a member of the BizInnovate Accelerator because I firmly
